--- a/css/8th-inheritance in css/8.css
+++ b/css/8th-inheritance in css/8.css
@@ -1,3 +1,6 @@
 div{
     background-color:aqua;
-}
+} 
+
+/*this is also shifted the child element because they do not have there color 
+so parent color is shifted to it*/
