--- a/css/14th-positioned/14.css
+++ b/css/14th-positioned/14.css
@@ -22,3 +22,19 @@ div{
     top: 100px;
     left: 100px; 
 }
+
+
+#absolute{
+    background-color: yellow;
+    position: absolute;
+    top: 100px;
+    left: 100px; 
+}
+
+
+#Fixed{
+    background-color: yellow;
+    position: Fixed;
+    top: 100px;
+    left: 100px; 
+}
